# smartsheet-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  prompts-lock.json  prompts.json  pyproject.toml  pytest.ini  smartsheet_tools.py  smartsheet_tools_optimized.py  workflows.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: agent.py  main.py  models.py
prompts/: smartsheet-agent.prompt.yaml
tests/: conftest.py
tests/evaluations/: smartsheet_agent_eval.ipynb  smartsheet_test_dataset.csv  test_agent_evaluations.py
tests/scenarios/: test_smartsheet_agent.py
